디렉토리 구조 정리

--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon server.js"
+    "nodemon": "nodemon bin/www.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Kdhyun23/NodeExpress#readme",
   "description": "",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.9"
